binrw/tests/ui/conflicting_keyword_passed_args.stderr
error: conflicting args keyword
 --> $DIR/conflicting_keyword_passed_args.rs:6:19
  |
6 |     #[br(args(0), args_tuple = (a, ))]
  |                   ^^^^^^^^^^
